# Secure-eFax

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  a.out  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  efax-gtk.1  efax-gtk.desktop  efax-gtk.spec  efax-gtk.spec.in  efax-gtkrc  test.txt
efax/: Makefile  Makefile.am  Makefile.in  PATCHES  efax-0.9a  efax.c  efaxio.c  efaxlib.c  efaxmsg.c  efaxos.c  efix-0.9a  hc128.c  hc128.h
efax-gtk-faxfilter/: Makefile  Makefile.in  efax-gtk-socket-client  efax-gtk-socket-client.cpp
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  bg.gmo  bg.po  ca.gmo  ca.po  de.gmo  de.po  efax-gtk.pot  el.gmo  el.po  en_GB.gmo  en_GB.po  he.gmo  he.po  hu.gmo  hu.po  it.gmo  it.po  pl.gmo  pl.po  ru.gmo  ru.po  sq.gmo  sq.po  sv.gmo  sv.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
src/: Makefile  Makefile.am  Makefile.in  addressbook.cpp  addressbook.h  dialogs.cpp  dialogs.h  efax-gtk  efax_controller.cpp  efax_controller.h  fax_list.cpp  fax_list.h  fax_list_manager.cpp  fax_list_manager.h  file_list.cpp  file_list.h  gpl.h  helpfile.cpp  helpfile.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  prog_defs.h  settings.cpp  settings.h  settings_help.cpp  settings_help.h  share_data.h  sigc_compatibility.h  socket_list.cpp  socket_list.h  socket_notify.cpp  socket_notify.h  socket_server.cpp  socket_server.h  tray_icon.cpp  tray_icon.h
src/libegg/: CREDITS  eggtrayicon.c
src/utils/: Makefile  Makefile.am  Makefile.in  async_queue.h  callback.h  fdstream.h  file_print_manager.cpp  file_print_manager.h  gerror_handle.h  gobj_handle.h  icon_info_handle.h  intrusive_ptr.h  io_watch.cpp  io_watch.h  mutex.h  notifier.cpp  notifier.h  pango_layout_iter_handle.h  pipes.cpp  pipes.h  selected_rows_handle.cpp  selected_rows_handle.h  sem_sync.h  shared_handle.h  shared_ptr.h  text_print_manager.cpp  text_print_manager.h  thread.cpp  thread.h  toolbar_append_widget.cpp  toolbar_append_widget.h  tree_path_handle.h  tree_row_reference_handle.h  utf8_utils.cpp  utf8_utils.h  widget.cpp  widget.h  window.cpp  window.h
